<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.button.settings.ButtonSettingsFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.easyphone.ui.button.settings.ButtonSettingsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonPreview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@{viewModel.buttonText}"
                android:contentDescription="@string/button_preview"/>

            <EditText
                android:id="@+id/buttonNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginVertical="@dimen/small_margin"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/buttonLengthField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginVertical="@dimen/small_margin"
                android:ems="10"
                android:hint="@string/length"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/buttonHeightField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginVertical="@dimen/small_margin"
                android:ems="10"
                android:hint="@string/heigth"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/colorField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginVertical="@dimen/small_margin"
                android:hint="@string/color"
                android:lineSpacingExtra="18sp"
                android:text="@{viewModel.colorName}"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginVertical="@dimen/small_margin"
                android:backgroundTint="#830A0A"
                android:contentDescription="@string/delete"
                android:text="@string/delete" />

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginVertical="@dimen/small_margin"
                android:contentDescription="@string/confirm"
                android:text="@string/confirm" />
        </LinearLayout>
    </ScrollView>
</layout>